--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build:css": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/output.css --watch",
     "dev": "next dev --turbopack",
-    "build": "next build  && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
